--- a/src/login/login.html
+++ b/src/login/login.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spotify Player</title>
+    <link rel="stylesheet" href="../main.css">
 </head>
 <body>
-    <h1>Welcome to Login</h1>
+    <h1 class='text-3xl font-bold underline text-red-300'>Welcome to Login</h1>
 </body>
 </html>
