--- a/src/dashboard/dashboard.html
+++ b/src/dashboard/dashboard.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Spotify Player</title>
+    <title>Spotify App</title>
 </head>
 <body>
     <h1>Welcome to Dashboard</h1>
