--- a/src/login/login.html
+++ b/src/login/login.html
@@ -1,15 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Spotify Music Player App</title>
-    <link rel="stylesheet" href="../main.css">
-</head>
+    <link rel="stylesheet" href="../main.css" />
+  </head>
 
-<body>
-    <h1 class='text-3xl font-bold underline text-red-300'>Welcome to Login</h1>
-</body>
-
+  <body>
+    <h1 class="text-3xl font-bold text-red-300 underline">Welcome to Login</h1>
+  </body>
 </html>
