sharing updated code to repo

--- a/src/login/login.html
+++ b/src/login/login.html
@@ -9,5 +9,7 @@
 
   <body>
     <h1 class="text-3xl font-bold text-red-300 underline">Welcome to Login</h1>
+    <button id="login-to-spotify" class="bg-black text-white">Login</button>
+    <script src="login.js" type="module"></script>
   </body>
 </html>
