added spotify icon

--- a/src/login/login.html
+++ b/src/login/login.html
@@ -10,7 +10,7 @@
   <body class="bg-green">
     <main class="h-screen flex justify-center items-center">
       <section class="flex gap-8 flex-col items-center">
-        <img class="h-[30vh]" src="https://cdn-icons-png.flaticon.com/128/2111/2111685.png" alt="" />
+        <img class="h-[20vh]" src="./Spotify_Logo_RGB_Black.png" alt="" />
         <input
           type="button"
           id="login-to-spotify"
