--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     Hi
-    <script src="main.js"></script>
+    <script src="main.js" type="module"></script>
   </body>
 </html>
 cl
