added some code

--- a/src/dashboard/dashboard.html
+++ b/src/dashboard/dashboard.html
@@ -39,7 +39,7 @@
                 </svg>
               </section>
               <section class="flex justify-center gap-1">
-                <h3 id="display-name">Sagar</h3>
+                <h3 id="display-name"></h3>
                 <i>🔻</i>
               </section>
             </button>
