--- a/src/dashboard/dashboard.html
+++ b/src/dashboard/dashboard.html
@@ -16,8 +16,9 @@
 
       <section class="content">
         <header class="border-2 border-solid px-4 py-2">
-          <nav class="flex justify-end">
+          <nav class="relative flex justify-end">
             <button
+            type="button"
               id="user-profile-btn"
               class="flex items-center gap-x-2 rounded-2xl p-2 px-4 hover:bg-light-black"
             >
@@ -43,6 +44,14 @@
                 <i>🔻</i>
               </section>
             </button>
+            <ul
+              id="user-profile-menu"
+              class="absolute top-14 hidden w-40 rounded-lg bg-light-black p-0.5"
+            >
+              <li id="menu-logout-btn" class="rounded-lg p-1 hover:bg-gray">
+                Log Out
+              </li>
+            </ul>
           </nav>
         </header>
         <section>contents</section>
