--- a/src/dashboard/dashboard.html
+++ b/src/dashboard/dashboard.html
@@ -54,7 +54,26 @@
             </ul>
           </nav>
         </header>
-        <section>contents</section>
+        <article>
+          <h1>Featured Playlist</h1>
+          <section id="featured-playlist-items">
+            <section>
+              <img src="" alt="">
+              <h2>Name</h2>
+              <h3>Description</h3>
+            </section>
+            <section>
+              <img src="" alt="">
+              <h2>Name</h2>
+              <h3>Description</h3>
+            </section>
+            <section>
+              <img src="" alt="">
+              <h2>Name</h2>
+              <h3>Description</h3>
+            </section>
+          </section>
+        </article>
       </section>
 
       <footer class="now-playing">now-playing</footer>
