--- a/src/dashboard/dashboard.html
+++ b/src/dashboard/dashboard.html
@@ -56,7 +56,7 @@
         </header>
         <article>
           <h1>Featured Playlist</h1>
-          <section id="featured-playlist-items">
+          <section id="featured-playlist-items" class="grid grid-cols-auto-fill-card">
             <section>
               <img src="" alt="">
               <h2>Name</h2>
