--- a/src/dashboard/dashboard.html
+++ b/src/dashboard/dashboard.html
@@ -58,17 +58,17 @@
           <h1>Featured Playlist</h1>
           <section id="featured-playlist-items" class="grid grid-cols-auto-fill-card">
             <section>
-              <img src="" alt="">
+              <img src="https://i.scdn.co/image/ab67706f0000000358baa5e80109ff59507fd98c" alt="">
               <h2>Name</h2>
               <h3>Description</h3>
             </section>
             <section>
-              <img src="" alt="">
+              <img src="https://i.scdn.co/image/ab67706f0000000358baa5e80109ff59507fd98c" alt="">
               <h2>Name</h2>
               <h3>Description</h3>
             </section>
             <section>
-              <img src="" alt="">
+              <img src="https://i.scdn.co/image/ab67706f0000000358baa5e80109ff59507fd98c" alt="">
               <h2>Name</h2>
               <h3>Description</h3>
             </section>
