--- a/src/dashboard/dashboard.html
+++ b/src/dashboard/dashboard.html
@@ -56,7 +56,7 @@
         </header>
         <article>
           <h1>Featured Playlist</h1>
-          <section id="featured-playlist-items" class="grid grid-cols-auto-fill-card">
+          <section id="featured-playlist-items gap-1" class="grid grid-cols-auto-fill-card">
             <section>
               <img src="https://i.scdn.co/image/ab67706f0000000358baa5e80109ff59507fd98c" alt="">
               <h2>Name</h2>
