Added top playlists endpoint

--- a/src/dashboard/dashboard.html
+++ b/src/dashboard/dashboard.html
@@ -61,6 +61,13 @@
             class="grid grid-cols-auto-fill-card gap-5"
           ></section>
         </article>
+        <article>
+          <h1>Top Playlist</h1>
+          <section
+            id="top-playlist-items"
+            class="grid grid-cols-auto-fill-card gap-5"
+          ></section>
+        </article>
       </section>
 
       <footer class="now-playing">now-playing</footer>
