--- a/src/dashboard/dashboard.html
+++ b/src/dashboard/dashboard.html
@@ -58,9 +58,9 @@
           id="cover-content"
           class="absolute -z-[1] h-72 w-full bg-gradient-to-b from-light-black to-black-base px-4 grid content-center"
         >
-          <h1>Hello Sagar</h1>
+          <h1 class="text-6xl">Hello Sagar</h1>
         </section>
-        <section id="page-contents" class="bg-black-base mt-60"></section>
+        <section id="page-contents" class="bg-black-base mt-60 p-4"></section>
       </article>
 
       <footer class="now-playing">now-playing</footer>
