--- a/src/dashboard/dashboard.html
+++ b/src/dashboard/dashboard.html
@@ -15,7 +15,7 @@
       <aside class="sidenav">aside</aside>
 
       <article class="content relative overflow-auto">
-        <header class="border-2 border-solid bg-transparent px-4 py-2">
+        <header class="header border-2 border-solid bg-transparent px-4 py-2">
           <nav class="relative flex justify-end">
             <button
               type="button"
