added playlist tracks

--- a/src/dashboard/dashboard.html
+++ b/src/dashboard/dashboard.html
@@ -56,11 +56,14 @@
         </header>
         <section
           id="cover-content"
-          class="absolute -z-[1] h-72 w-full bg-gradient-to-b from-light-black to-black-base px-4 grid content-center"
+          class="absolute -z-[1] grid h-72 w-full content-center bg-gradient-to-b from-light-black to-black-base px-4"
         >
           <h1 class="text-6xl">Hello Sagar</h1>
         </section>
-        <section id="page-contents" class="bg-black-base mt-60 p-4"></section>
+        <section
+          id="page-contents"
+          class="mt-60 bg-black-base p-4 text-secondary"
+        ></section>
       </article>
 
       <footer class="now-playing">now-playing</footer>
