fixed some styling a stable look and feel

--- a/src/dashboard/dashboard.html
+++ b/src/dashboard/dashboard.html
@@ -58,7 +58,7 @@
           id="cover-content"
           class="absolute -z-[1] grid h-72 w-full content-center bg-gradient-to-b from-light-black to-black-base px-4"
         >
-          <h1 class="text-6xl">Hello Sagar</h1>
+          <h1 class="text-6xl">Hello <span id="greet-user"></span></h1>
         </section>
         <section
           id="page-contents"
