--- a/src/dashboard/dashboard.html
+++ b/src/dashboard/dashboard.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="../main.css" />
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,1,0" />
-  <!-- <script type="module" src="./dashboard.js"></script> -->
+  <script type="module" src="./dashboard.js"></script>
 </head>
 
 <body class="h-screen bg-black text-primary">
