--- a/src/dashboard/dashboard.html
+++ b/src/dashboard/dashboard.html
@@ -72,7 +72,9 @@
         </section>
         <section class="flex gap-2 w-full items-center">
           <span id="total-duration-completed">0:00</span>
-          <section id="progress" class="bg-secondary h-2 w-full rounded-3xl cursor-pointer"></section>
+          <section class="bg-secondary w-full rounded-3xl cursor-pointer">
+            <span id="progress" class="w-0 h-2 bg-green"></span>
+          </section>
           <span id="total-duration">0:00</span>
         </section>
       </section>
