--- a/src/dashboard/dashboard.html
+++ b/src/dashboard/dashboard.html
@@ -73,7 +73,7 @@
         <section class="flex gap-2 w-full items-center">
           <span id="total-duration-completed">0:00</span>
           <section class="bg-secondary w-full rounded-3xl cursor-pointer">
-            <span id="progress" class="w-0 h-2 bg-green"></span>
+            <section id="progress" class="h-2 bg-green rounded-3xl w-0"></section>
           </section>
           <span id="total-duration">0:00</span>
         </section>
