--- a/src/dashboard/dashboard.html
+++ b/src/dashboard/dashboard.html
@@ -71,7 +71,7 @@
       </article>
 
       <footer
-        class="now-playing grid grid-cols-[1fr_2fr_1fr] gap-6 bg-black-secondary p-4 text-secondary"
+        class="now-playing grid grid-cols-[1fr_2fr_1fr] gap-6 bg-black-secondary p-4 text-secondary border-t-2 border-gray"
       >
         <section
           class="flex flex-row items-center justify-center gap-2"
