--- a/src/dashboard/dashboard.html
+++ b/src/dashboard/dashboard.html
@@ -9,7 +9,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,1,0"
     />
-    <script type="module" src="./dashboard.js"></script>
+    <!-- <script type="module" src="./dashboard.js"></script> -->
   </head>
 
   <body class="h-screen bg-black text-primary">
@@ -60,9 +60,15 @@
         </header>
         <section
           id="cover-content"
-          class="absolute -z-[1] grid h-72 w-full content-center bg-gradient-to-b from-light-black to-black-base px-4"
+          class="absolute -z-[1] grid h-72 w-full grid-cols-[auto_1fr] gap-4 content-center bg-gradient-to-b from-light-black to-black-base px-4"
         >
-          <h1 class="text-6xl">Hello <span id="greet-user"></span></h1>
+          <!-- <h1 class="text-6xl">Hello <span id="greet-user"></span></h1> -->
+          <img src="" alt="" class="h-36 w-36" />
+          <section class="flex items-start flex-col gap-2">
+            <h1 class="text-4xl">Playlist name</h1>
+            <h3>Description</h3>
+            <p>No of songs</p>
+          </section>
         </section>
         <section
           id="page-contents"
@@ -71,7 +77,7 @@
       </article>
 
       <footer
-        class="now-playing grid grid-cols-[1fr_2fr_1fr] gap-6 bg-black-secondary p-4 text-secondary border-t-2 border-gray"
+        class="now-playing grid grid-cols-[1fr_2fr_1fr] gap-6 border-t-2 border-gray bg-black-secondary p-4 text-secondary"
       >
         <section
           class="flex flex-row items-center justify-center gap-2"
@@ -79,12 +85,11 @@
         >
           <img src="" alt="image" id="now-playing-image" />
           <section>
-            <h2 class="text-bas text-white line-clamp-1" id="now-playing-name">
-              song name
-            </h2>
-            <p class="text-sm line-clamp-1" id="now-playing-artists">
-              artist names
-            </p>
+            <h2
+              class="text-bas text-white line-clamp-1"
+              id="now-playing-name"
+            ></h2>
+            <p class="text-sm line-clamp-1" id="now-playing-artists"></p>
           </section>
         </section>
         <section
@@ -110,7 +115,10 @@
           </section>
           <section class="flex w-full items-center gap-2">
             <span id="total-duration-completed">0:00</span>
-            <section class="w-full cursor-pointer rounded-3xl bg-secondary">
+            <section
+              id="timeline"
+              class="w-full cursor-pointer rounded-3xl bg-secondary"
+            >
               <section
                 id="progress"
                 class="h-2 w-0 rounded-3xl bg-green"
