--- a/src/dashboard/dashboard.html
+++ b/src/dashboard/dashboard.html
@@ -9,7 +9,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,1,0"
     />
-    <!-- <script type="module" src="./dashboard.js"></script> -->
+    <script type="module" src="./dashboard.js"></script>
   </head>
 
   <body class="h-screen bg-black text-primary">
@@ -62,12 +62,7 @@
           id="cover-content"
           class="absolute -z-[1] grid h-72 w-full grid-cols-[auto_1fr] gap-4 content-center bg-gradient-to-b from-light-black to-black-base px-4"
         >
-          <!-- <h1 class="text-6xl">Hello <span id="greet-user"></span></h1> -->
-          <img src="" alt="" class="h-36 w-36" />
-          <section class="flex items-start flex-col gap-2">
-            <h1 class="text-4xl">Playlist name</h1>
-            <h3>Description</h3>
-            <p>No of songs</p>
+          <h1 class="text-6xl">Hello <span id="greet-user"></span></h1>
           </section>
         </section>
         <section
