--- a/src/login/login.html
+++ b/src/login/login.html
@@ -5,12 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Spotify Music App</title>
     <link rel="stylesheet" href="../main.css" />
+    <link rel="shortcut icon" href="../assets/Spotify_Icon_RGB_Green.png" type="image/x-icon">
   </head>
 
   <body class="bg-green">
     <main class="h-screen flex justify-center items-center">
       <section class="flex gap-8 flex-col items-center">
-        <img class="h-[20vh]" src="./Spotify_Logo_RGB_Black.png" alt="" />
+        <img class="h-[20vh]" src="../assets/Spotify_Logo_RGB_Black.png" alt="" />
         <input
           type="button"
           id="login-to-spotify"
