fixed play pause icon issue

--- a/src/dashboard/dashboard.html
+++ b/src/dashboard/dashboard.html
@@ -11,7 +11,7 @@
     />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@48,400,0,0" />
     <link rel="shortcut icon" href="../assets/Spotify_Icon_RGB_Green.png" type="image/x-icon">
-    <!-- <script type="module" src="./dashboard.js"></script> -->
+    <script type="module" src="./dashboard.js"></script>
   </head>
 
   <body class="h-screen bg-black text-primary">
